# kraken-assessment

./: .clang-format  .gitignore  CMakeLists.txt  README.md  flake.nix
data/inputs/: balanced-book-1.in.csv  balanced-book-2.in.csv  balanced-book-3.in.csv  balanced-book-4.in.csv  balanced-book-5.in.csv  balanced-book-6.in.csv  balanced-book-7.in.csv  balanced-book-8.in.csv  balanced-book-9.in.csv  matching-asking-price-2.in.csv  matching-asking-price.in.csv  matching.in.csv  only-one-cancelled.in.csv  only-one.in.csv  shallow-ask.in.csv  shallow-bid.in.csv  tighten-spread-through-new-limit-orders.in.csv  two.in.csv
data/invalid/: matching-remaining-quantity-ask.csv  matching-remaining-quantity-bid.csv
data/outputs/: balanced-book-1.out.csv  balanced-book-2.out.csv  balanced-book-3.out.csv  balanced-book-3.trades.out.csv  balanced-book-5.out.csv  balanced-book-6.out.csv  balanced-book-7.out.csv  balanced-book-8.out.csv  balanced-book-9.out.csv  matching-asking-price-2.out.csv  matching-asking-price-2.trades.out.csv  matching-asking-price.out.csv  matching-asking-price.trades.out.csv  matching.trades.out.csv  only-one-cancelled.out.csv  only-one.out.csv  shallow-ask.out.csv  shallow-ask.trades.out.csv  shallow-bid.out.csv  two.out.csv  (+1 more)
src/: CMakeLists.txt  config.h.in  kraken.cc
src/book/: CMakeLists.txt  order.cc  order.hh
src/csv/: CMakeLists.txt  csv.hh  read-csv.cc  read-csv.hh  write-csv.cc  write-csv.hh
src/engine/: CMakeLists.txt  csv-engine-listener.cc  csv-engine-listener.hh  engine-listener.cc  engine-listener.hh  engine.cc  engine.hh
src/parse/: CMakeLists.txt  order.hh  parse.cc  parse.hh
src/utils/: CMakeLists.txt  strong-type.hh
tests/unit/: CMakeLists.txt  csv.cc  engine.cc  parse.cc
(+2 files in other folders)
